# TodoRust

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  setup.py  tasks.db
RustTools/todo/src/: main.rs
db_scripts (python)/: create_db.py  in_mem.py  tasks.db
ki1-20/vs/: tes.cs
src/: build.rs  clap.rs  command.rs  db-rusqlite.rs  db.rs  main.rs  notify.rs  tasks.db  tasks.rs  todo.rs
