[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-make = "0.37.4"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["debug", "env", "derive", "unicode", "string", "deprecated", "wrap_help"] }
#rusqlite = "0.29.0"
sqlite3 = "0.24.0"
